Change name from template

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bolt-cross-workspace-starter",
+    "name": "info-bot",
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
