--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "author": "Khushraj Rathod",
     "license": "GPL-3.0",
     "dependencies": {
-        "@prisma/client": "2.16.0",
+        "@prisma/cli": "^2.14.0",
+        "@prisma/client": "^2.14.0",
         "@slack/bolt": "^3.0.0",
         "dotenv": "^8.2.0"
-    },
-    "devDependencies": {
-        "prisma": "2.16.0"
     }
 }
