--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
+        "dev": "ts-node -r dotenv/config index.ts",
+        "build": "tsc index.js",
         "start": "node -r dotenv/config index.js"
     },
     "author": "Khushraj Rathod",
@@ -11,6 +13,9 @@
         "@prisma/cli": "^2.14.0",
         "@prisma/client": "^2.14.0",
         "@slack/bolt": "^3.0.0",
-        "dotenv": "^8.2.0"
+        "@types/node": "^14.14.28",
+        "dotenv": "^8.2.0",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.1.5"
     }
 }
