--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
     "main": "index.js",
     "scripts": {
         "dev": "ts-node -r dotenv/config index.ts",
-        "build": "tsc index.js",
+        "build": "tsc .",
         "start": "node -r dotenv/config index.js"
     },
     "author": "Khushraj Rathod",
     "license": "GPL-3.0",
     "dependencies": {
-        "@prisma/cli": "^2.20.1",
         "@prisma/client": "^2.23.0",
         "@slack/bolt": "^3.3.0",
+        "dotenv": "^9.0.2"
+    },
+    "devDependencies": {
         "@types/node": "^15.3.1",
-        "dotenv": "^9.0.2",
+        "prisma": "^2.23.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.2.4"
     }
